@@ -51,6 +51,7 @@ Misc:
  - GBA: Refactor gba-sensors and gba-gpio into gba-hardware
  - GBA: Refactor gba directory, dropping gba- prefix and making supervisor directory
  - Debugger: Add support for soft breakpoints
+ - Util: Use proper locale for reading and writing float values
 
 0.1.1: (2015-01-24)
 Bugfixes:
